--- a/styles/common.css
+++ b/styles/common.css
@@ -1,3 +1,17 @@
+/* common.css 모든 웹페이지 공통 css = common */
+/* common.css = header, footer 공통영역 Design */
+/* Firefox */
+html {scrollbar-width: 10px;;scrollbar-color: #222 #f1f1f1;}
+/* Opera */
+html::-o-scrollbar {width: 10px;}/*스크롤바 크기*/
+html::-o-scrollbar-thumb {background-color: #222;border-radius: 5px;}/*스크롤 드래그바*/
+html::-o-scrollbar-thumb:hover {background-color: #FFDB59;}
+/* Chrome, Safari, Edge 등 웹킷 기반 브라우저 */
+::-webkit-scrollbar {width: 10px;}/*스크롤바 크기*/
+::-webkit-scrollbar-track {box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.3);}/*스크롤바 배경*/
+::-webkit-scrollbar-thumb {background-color: #222;border-radius: 5px;}/*스크롤 드래그바*/
+::-webkit-scrollbar-thumb:hover {background-color: #FFDB59;}
+/* header */
 header {
     background-color:aquamarine;
     max-width: calc(100% - 60px);
@@ -55,3 +69,82 @@ header .h_right #cart {width: 40px;}
 header .h_right #cart img {width: 100%;}
 header .h_right #nav {width: 40px;}
 header .h_right #nav img {width: 100%;}
+/* open-nav */
+header #open_nav {
+    position:fixed; 
+    left: 0; 
+    top: 0; 
+    z-index: 999;
+    width: 100%; 
+    height: 100vh;
+    background: #f1f1f1;
+    overflow-y: auto;
+    /* 웹브라우저 y축 기준으로 내용이 넘칠 경우 스크롤을 표시하고 넘치지 않는다면 스크롤을 숨긴다. */
+}
+header #open_nav #nav_close {
+    position: absolute;
+    width: 35px; height: 35px;
+    right: 103px; top: 127px;
+}
+header #open_nav #nav_close img {width: 100%;}
+/* swiper-slide nav-adver */
+header #open_nav #nav_adver {
+    text-align: center;
+    max-width: 1000px;
+    margin: 20px auto;
+    padding: 10px;
+}
+header #open_nav #nav_adver .swiper-wrapper .swiper-slide a {font-size: 1.25rem;}
+header #open_nav #nav_adver .swiper-button-prev {
+    background: url(../images/adver_prev.png) no-repeat center;
+}
+header #open_nav #nav_adver .swiper-button-next {
+    background: url(../images/adver_next.png) no-repeat center;
+}
+/* open-nav nav */
+header #open_nav nav {
+    display: flex;
+    flex-flow: column nowrap;
+    align-items: center;
+    margin-top: 176px;
+}
+header #open_nav nav a {
+    font-size: 3.157rem;
+    font-weight: 700;
+    margin-bottom: 60px;
+    position: relative;
+}
+header #open_nav nav a:last-child {margin-bottom: 0;}
+/* header #open_nav nav a:hover{
+    color: #FFDB59;
+    background-color: #f1f1f1;
+    width: 30%;
+    text-align: center;
+}
+header #open_nav nav a:hover::after {
+    width: 1000px; height: 5px; background: #FFDB59;
+    position: absolute; bottom: 20px;
+    transform:translateX(-50%) scaleX(1); 
+    z-index: -90;
+    left: 50%; 
+}
+header #open_nav nav a::after{
+    content:''; display: block;
+    transform: translateX(-50%) scaleX(0);
+    transition: all 0.3s;
+} */
+header #open_nav nav a:hover{
+    color: #fff;
+}
+header #open_nav nav a:hover::after {
+    width: 1000px; height: 80px; background:#FFDB59;
+    position: absolute; bottom: -15px;
+    transform:translateX(-50%) scaleX(1); 
+    z-index: -90;
+    left: 50%; 
+}
+header #open_nav nav a::after{
+    content:''; display: block;
+    transform: translateX(-50%) scaleX(0);
+    transition: all 0.3s;
+}
