--- a/styles/index.css
+++ b/styles/index.css
@@ -79,11 +79,13 @@ main .visual video {
 /* 2. 가장 큰 데스크탑 기준으로 너비를 100%보다 크게 설정하고 넘치게 하는 방법 */
 /* 3. 상대크기가 아닌 절대크기값(px) 크기를 설정해서 화면해상도에 영향을 받지 않는 방법 */
 main .adver_bnr {
-    background: url(../images/bnr.jpg) no-repeat center;
+    background: url(../images/bnr.jpg);
     background-size: cover;
-    width: 100%;
+    height: 300px;
+    padding: 66px;
 }
 main .adver_bnr .txt {
+    max-width: 1200px; margin: 0 auto;
     display: flex;
     flex-flow: column nowrap;
 }
@@ -91,28 +93,92 @@ main .adver_bnr .txt p {
     font-size: 1.777rem;
     letter-spacing: -0.02em;
 }
-main .adver_bnr .txt h2 {
+main .adver_bnr .txt h1 {
     font-size: 3.157rem;
     font-weight: 700;
+    letter-spacing: -0.02em;
     margin: 15px 0;
 }
-main .adver_bnr .txt .link {
-    display: flex;
-    flex-flow: row nowrap;
-}
+main .adver_bnr .txt .link {}
 main .adver_bnr .txt .link a {
-    background: rgba(255,255,255,0.5);
+    display: inline-block;
+    background: rgba(255,255,255,0.7);
     font-size: 1.333rem;
     font-weight: 500;
+    letter-spacing: -0.02em;
     color: #000;
-    width: 230px;
+    width: 180px;
+    margin-right: 10px;
     padding: 15px 0;
     border-radius: 10px;
     text-align: center;
     transition: all 0.3s;
 }
 main .adver_bnr .txt .link a:hover {
-    background: #222;
+    background: rgba(0,0,0,0.7);
     color: #fff;
 }
 main .adver_bnr .txt .link a:first-child {margin-right: 10px;}
+/* main 3. service */
+main #online_service,
+main #shop_service {
+    margin-top: 50px;
+    padding-top: 75px;
+    display: flex;
+    flex-flow: row nowrap;
+}
+main #online_service {
+    background: url(../images/service_bg1.jpg) no-repeat;
+    background-position: right center;
+    background-size: 80%;
+}
+main #online_service .txt,
+main #shop_service .txt {
+    background-color:white;
+    max-width: 834px;
+    padding: 88px 127px;
+}
+main #online_service .txt h1,
+main #shop_service .txt h1 {
+    font-size: 3.157rem;
+    letter-spacing: -0.02em;
+    font-weight: 700;
+}
+main #online_service .txt p,
+main #shop_service .txt p {
+    font-size: 1.25rem;
+    letter-spacing: -0.04em;
+    line-height: 35px;
+    margin: 20px 0;
+}
+main #online_service .txt a,
+main #shop_service .txt a {
+    display: inline-block;
+    background: rgba(0,0,0,0.7);
+    font-size: 1.333rem;
+    font-weight: 500;
+    color: #fff;
+    width: 230px;
+    padding: 15px 0;
+    border-radius: 10px;
+    text-align: center;
+    transition: all 0.3s;
+}
+main #online_service .txt a:hover,
+main #shop_service .txt a:hover {
+    background: rgba(255,219,89,1);
+    color: #fff;
+}
+main #shop_service {
+    background: url(../images/service_bg3.jpg) no-repeat;
+    background-size: 80%;
+    background-position: left center;
+    display: flex;
+    flex-flow: row-reverse nowrap;
+}
+main #shop_service .txt {
+    text-align: right;
+}
+main #shop_service .txt h1 {}
+main #shop_service .txt p {}
+main #shop_service .txt a {}
