--- a/styles/common.css
+++ b/styles/common.css
@@ -90,6 +90,7 @@ header #open_nav #nav_close {
     background: url(../images/nav_close.png) no-repeat center;
     background-size: cover;
     transition: all 0.1s;
+    text-indent: -9999px;
 }
 /* swiper-slide nav-adver */
 header #open_nav #nav_adver {
