--- a/styles/login.css
+++ b/styles/login.css
@@ -1,5 +1,5 @@
 main {
-    margin: 230px auto;
+    margin: 150px auto;
     text-align: center;
 }
 main .login {
@@ -7,11 +7,10 @@ main .login {
     max-width: 600px;
 }
 main .login h1 {
-    width: 350px; height: 70px;
+    font-size: 2.369rem;
+    font-weight: 700;
     margin: 0 auto;
 }
-main .login h1 a {}
-main .login h1 a img {width: 100%;}
 main .login .tab_title {
     display: flex;
     justify-content: center;
@@ -42,8 +41,9 @@ main .login .tab_contents .tab_c2 form fieldset .order_contents .email_wrap > in
 main .login .tab_contents .tab_c2 form fieldset .order_contents .phone_num > input {
     border: 1px solid #ccc;
     border-radius: 5px;
-    width: 600px;
-    padding: 20px;
+    width: 600px; height: 70px;
+    padding: 0 20px;
+    font-size: 1.333rem;
 }
 main .login .tab_contents .tab_c1 form fieldset .login_input input:first-child {margin-bottom: 15px;}
 main .login .tab_contents .tab_c1 form fieldset .login_input input::placeholder {
@@ -56,7 +56,7 @@ main .login .tab_contents .tab_c1 form fieldset .mid {
     display: flex;
     flex-flow: row nowrap;
     justify-content: space-between;
-    margin: 20px 0 50px;
+    margin: 30px 0 50px;
 }
 main .login .tab_contents .tab_c1 form fieldset .mid .fix {
     display: flex;
@@ -90,7 +90,7 @@ main .login .tab_contents .tab_c1 .other {
     display: flex;
     flex-flow: row nowrap;
     justify-content: center;
-    padding: 70px 0;
+    padding: 50px 0;
 }
 main .login .tab_contents .tab_c1 .other a {
     width: 80px; height: 80px;
@@ -116,8 +116,14 @@ main .login .tab_contents .tab_c2 form fieldset .order_name p {
 }
 main .login .tab_contents .tab_c2 form fieldset .order_name p #name {
     margin: 20px 0 50px;
+    font-size: 1.333rem;
 }
-main .login .tab_contents .tab_c2 form fieldset .order_name p #name::placeholder {font-size: 1.333rem;}
+main .login .tab_contents .tab_c2 form fieldset .order_contents .email_wrap  input::placeholder,
+main .login .tab_contents .tab_c2 form fieldset .order_contents .phone_num input::placeholder,
+main .login .tab_contents .tab_c2 form fieldset .order_name p #name::placeholder {
+    font-size: 1.333rem;
+    color: #ccc;
+}
 main .login .tab_contents .tab_c2 form fieldset .radio {
     text-align: left;
     display: flex;
@@ -136,8 +142,6 @@ main .login .tab_contents .tab_c2 form fieldset .order_contents .phone_num {
     margin: 20px 0 50px;
 }
 main .login .tab_contents .tab_c2 form fieldset .order_contents .email_wrap input {}
-main .login .tab_contents .tab_c2 form fieldset .order_contents .email_wrap  input::placeholder,
-main .login .tab_contents .tab_c2 form fieldset .order_contents .phone_num input::placeholder {font-size: 1.333rem;}
 main .login .tab_contents .tab_c2 form fieldset .order_contents .phone_num > input,
 main .login .tab_contents .tab_c2 form fieldset .order_contents .email_wrap > input {
     margin-bottom: 15px;
@@ -148,37 +152,46 @@ main .login .tab_contents .tab_c2 form fieldset .order_contents .email_wrap .ema
     justify-content: space-between;
     align-items: center;
 }
-main .login .tab_contents .tab_c2 form fieldset .order_contents .email_wrap .email_input #email {width: 250px;}
+main .login .tab_contents .tab_c2 form fieldset .order_contents .email_wrap .email_input #email {
+    width: 220px;
+    font-size: 1.333rem;
+}
 main .login .tab_contents .tab_c2 form fieldset .order_contents .email_wrap .email_input #email,
 main .login .tab_contents .tab_c2 form fieldset .order_contents .email_wrap .email_input #email_select {
     border: 1px solid #ccc;
     border-radius: 5px;
-    padding: 20px;
+    height: 70px;
+    padding: 0 20px;
+    font-size: 1.333rem;
 }
 main .login .tab_contents .tab_c2 form fieldset .order_contents .email_wrap .email_input #email_select option {font-size: 1.333rem;}
 main .login .tab_contents .tab_c2 form fieldset .order_contents .email_wrap .email_input span {font-size: 1.333rem;}
-main .login .tab_contents .tab_c2 form fieldset .order_contents .email_wrap .email_input #email_select {width: 300px;}
+main .login .tab_contents .tab_c2 form fieldset .order_contents .email_wrap .email_input #email_select {
+    width: 330px;
+    color: #ccc;
+}
 main .login .tab_contents .tab_c2 form fieldset .order_contents .phone_num .user_num {
     display: flex;
     flex-flow: row nowrap;
     align-items: center;
     justify-content: space-between;
 }
+main .login .tab_contents .tab_c2 form fieldset .order_contents .phone_num .user_num input,
 main .login .tab_contents .tab_c2 form fieldset .order_contents .phone_num .user_num #phone_select {
     border: 1px solid #ccc;
     border-radius: 5px;
-    padding: 20px;
-    width: 120px;
-    cursor: pointer;
-    margin-right: 29px;
-}
-main .login .tab_contents .tab_c2 form fieldset .order_contents .phone_num .user_num #phone_select option {font-size: 1.333rem;}
-main .login .tab_contents .tab_c2 form fieldset .order_contents .phone_num .user_num input {
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    padding: 20px;
+    height: 70px;
+    padding: 0 20px;
     width: 130px;
 }
+main .login .tab_contents .tab_c2 form fieldset .order_contents .phone_num .user_num #phone_select {
+    margin-right: 29px;
+    cursor: pointer;
+    font-size: 1.333rem;
+    color: #aaa;
+}
+main .login .tab_contents .tab_c2 form fieldset .order_contents .phone_num .user_num #phone_select option {font-size: 1.333rem;}
+main .login .tab_contents .tab_c2 form fieldset .order_contents .phone_num .user_num input {}
 main .login .tab_contents .tab_c2 form fieldset p {}
 main .login .tab_contents .tab_c2 form fieldset p button {margin-bottom: 70px;}
 
@@ -186,12 +199,11 @@ main .login .tab_contents .tab_c2 form fieldset p button {margin-bottom: 70px;}
 /* join */
 main .login .join {
     border-top: 1px solid #ccc;
-    padding-top: 70px;
+    padding-top: 50px;
 }
 main .login .join > span {}
 main .login .join > a {
-    border: 1px solid rgb(88, 195, 231);
-    color: rgb(88, 195, 231);
+    border: 1px solid #000;
     border-radius: 5px;
     padding: 30px 0;
     width: 600px;
@@ -202,5 +214,5 @@ main .login .join > a {
     transition: all 0.1s;
 }
 main .login .join > a:hover {
-    box-shadow: 0 0 5px rgba(88, 195, 231,0.5);
+    box-shadow: 0 0 5px rgba(0,0,0,0.3);
 }
