--- a/styles/product.css
+++ b/styles/product.css
@@ -1,18 +1,86 @@
-/* swiper-slide */
-/* category */
 main {
     margin: 0 auto;
-    max-width: 1380px;
 }
+/* swiper-slide */
+main #product_slide {}
+main #product_slide .swiper-wrapper {}
+main #product_slide .swiper-wrapper .swiper-slide {
+    /* 공통 slide 1~6 */
+    width: 700px;
+    height: 740px;
+    position: relative;
+}
+main #product_slide .swiper-wrapper .swiper-slide .slide_txt {
+    position: absolute;
+    left: 100px; bottom: 80px;
+    /* 초기 숨기기(이후 swiper 활용 서서히 나타나고 사라지기 기능추가 */
+    opacity: 0;
+    transform: translateX(40%); 
+    transition: all 2s;
+    z-index: 300;
+}
+main #product_slide .swiper-wrapper .swiper-slide .slide_txt dt {
+    letter-spacing: -0.02em;
+    line-height: 50px;
+    margin-bottom: 25px;
+}
+main #product_slide .swiper-wrapper .swiper-slide .slide_txt dt em {
+    font-size: 2.369rem;
+    color: #fff;
+    background: rgba(255, 219, 89,0.7);
+    padding: 0 5px;
+    font-weight: 700;
+}
+main #product_slide .swiper-wrapper .swiper-slide .slide_txt dt span {
+    font-size: 2.369rem;
+    color: #fff;
+    filter:drop-shadow(0 0 4px rgba(34, 34, 34, 0.3));
+}
+main #product_slide .swiper-wrapper .swiper-slide .slide_txt dd {
+    font-size: 1.333rem;
+    color: #fff;
+    filter:drop-shadow(0 0 4px rgba(34, 34, 34, 0.3));
+}
+main #product_slide .swiper-wrapper .slide {
+    position: relative;
+    z-index: 100;
+}
+main #product_slide .swiper-wrapper .bg::after { /*배경화면 그라디언트 색 추가 */
+    content:''; 
+    display: block; 
+    width: 100%;/* block을 쓰면 기본이 100%값이다 */ 
+    height: 300px;
+    background: linear-gradient(180deg, rgba(255,255,255,0%) 0%, rgba(0,0,0,0.3) 100%);
+    position: absolute; left: 0; bottom: 0;
+    z-index: 200;
+}
+main #product_slide .swiper-wrapper .slide1 {background: url(../images/model/model_2.jpg) no-repeat center;}
+main #product_slide .swiper-wrapper .slide2 {background: url(../images/model/model_3.jpg) no-repeat center;}
+main #product_slide .swiper-wrapper .slide3 {background: url(../images/model/model_6.jpg) no-repeat center;}
+main #product_slide .swiper-wrapper .slide4 {background: url(../images/model/model_7.jpg) no-repeat center;}
+main #product_slide .swiper-wrapper .slide5 {background: url(../images/model/model_8.jpg) no-repeat center;}
+main #product_slide .swiper-wrapper .slide6 {background: url(../images/model/model_9.jpg) no-repeat center;}
+/* swiper-scrollbar design */
+main #product_slide .swiper-scrollbar {
+    background: rgba(255,255,255,0.9);
+    width: 30%;
+    position: relative;
+    bottom: 30px;
+    left: 50%;
+    transform: translateX(-50%);
+} /* 스크롤 배경(크기,위치 O) */
+main #product_slide .swiper-scrollbar-drag {
+    background: #FFDB59;
+} /* 스크롤 막대(크기 X) */
+/* category */
 main #category,main #product_list {}
 main #category {
-    background-color: aqua;
+    max-width: 1380px;
     margin: 0 auto;
-    width: 1350px;
     display: flex;
     flex-flow: row nowrap;
     justify-content: space-between;
-    padding: 100px 0;
+    padding: 100px 15px;
 }
 main #category a {
     width: 170px;
@@ -39,7 +107,10 @@ main #category a span {
     display: block;
 }
 /* product_list */
-main #product_list {}
+main #product_list {
+    margin: 0 auto;
+    max-width: 1380px;
+}
 main #product_list .title {
     
 }main #product_list .title .title_t,
@@ -138,9 +209,10 @@ main #product_list .container .item .txt .color span {
     margin-right: 7px;
     text-indent: -9999px;
     display: inline-block;
+    position: relative;
 }
 main #product_list .container .item .txt .color span:nth-child(1) {background: black;}
-main #product_list .container .item .txt .color span:nth-child(2) {background: gray;}
-main #product_list .container .item .txt .color span:nth-child(3) {background: white; border: 1px solid #aaa;}
-main #product_list .container .item .txt .color span:nth-child(4) {background: darkred;}
-main #product_list .container .item .txt .color span:nth-child(5) {background: navy;}
+main #product_list .container .item .txt .color span:nth-child(2) {background: lightgray;}
+main #product_list .container .item .txt .color span:nth-child(3) {background: white; border: 1px solid #ccc; position: relative; top: 1px;}
+main #product_list .container .item .txt .color span:nth-child(4) {background: pink;}
+main #product_list .container .item .txt .color span:nth-child(5) {background: lightblue;}
